--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "hellolaoyang <aaron@codonas.cn>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf dist",
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "rimraf dist && rollup --config rollup.config.js",
     "start": "node dist"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node-schedule": "^1.3.2",
     "rimraf": "^3.0.2",
+    "rollup": "^2.61.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
