--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "author": "hellolaoyang <aaron@codonas.cn>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf dist",
-    "dev": "tsc --watch",
-    "build": "tsc",
-    "start": "node dist"
+    "dev": "rimraf ddns && tsc --watch",
+    "build": "rimraf ddns && tsc",
+    "start": "node ddns"
   },
   "devDependencies": {
     "@types/node-schedule": "^1.3.2",
